# fastcomposer

./: .gitignore  env.sh  predict.py  pyproject.toml  requirements.txt
demo/: pipeline.py
evaluation/single_object/: run.py
fastcomposer/: attn.py  inference.py  linear_attn.py  model.py  pipeline.py  train.py  train_freeze.py  transforms.py  utils.py
scripts/: run_inference.sh  run_inference_checkpoint.sh  run_inference_linear.sh  run_training.sh  run_training_freeze.sh  run_training_tiny.sh
