[project]
name = "fastcomposer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate",
    "clip-by-openai",
    "datasets==3.5.1",
    "diffusers==0.16.1",
    "evaluate==0.4.3",
    "facenet-pytorch==2.5.3",
    "gradio>=4",
    "huggingface-hub<0.26",
    "torch>=1.7.0",
    "torchvision>=0.8.2",
    "transformers==4.25.1",
    "triton",
]
