[project]
name = "fastcomposer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>1.0.0",
    "datasets==3.5.1",
    "diffusers==0.16.1",
    "evaluate==0.4.3",
    "facenet-pytorch==2.5.3",
    "clip-anytorch @ git+https://github.com/rom1504/CLIP.git@2.6.0",
    "gradio>=5",
    "huggingface-hub<0.26",
    "torch>=2.0.0",
    "torchvision>=0.8.2",
    "transformers==4.25.1",
    "numpy<2",
    "setuptools>=80.2.0",
]
